Modificacion aplicacion, funcionando

--- a/app-condominio/backend/.env
+++ b/app-condominio/backend/.env
@@ -1,6 +1,9 @@
 PORT=4000
+
 ORACLE_USER=AINTEGRAEDI
-ORACLE_CLIENT_LIB_DIR=C:\ORACLE\instantclient_23_9
-ORACLE_TNS_ADMIN=C:\WALLET\Wallet_app-condominio
-ORACLE_CONNECT_STRING=i7bxadqhsfboadwt_high
 ORACLE_PASSWORD=DuocUC..2025
+
+ORACLE_CLIENT_LIB_DIR=D:\Oracle\instantclient_23_0
+ORACLE_TNS_ADMIN=D:\WALLET_BD\Wallet_I7BXADQHSFBOADWT
+
+ORACLE_CONNECT_STRING=i7bxadqhsfboadwt_high
