--- a/app-condominio/backend/package.json
+++ b/app-condominio/backend/package.json
@@ -8,8 +8,12 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "oracledb": "^6.4.0"
-  }
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "oracledb": "^6.10.0"
+  },
+  "description": "",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
